trait variable changes and nanomachines, son

--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -2834,7 +2834,7 @@ todo_ascension:0 ""
 	tec_ascension.500.approach.evolved.ascensions:0 "Follow an artificial §YEvolution§!"
 	tec_ascension.500.approach.evolved.ascensions.tooltip:0 "$tec_loc_warning$ We will study new ways to improve our synthetic existence, attempting to fully decipher our very foundation and how to improve it radically.\n§YThis will allow more dynamic and further ways of ascending.§!\n\n$tec_loc_final_decision$"
 	tec_ascension.500.machineage.ascensions:0 "Submit to a §YTransformation§!"
-	tec_ascension.500.machineage.ascensions.tooltip:0 "$tec_loc_warning$ We will attempt to find alternative ways to completely transform our synthetic platforms into different ones, using §YExotic Resources§! for that goal, attempting to investigate about §YNanorreplication§!, §YModularity§! or even the power of §YVirtuality§! applications.\n§YThis will, however, end in a one-side way and don't allow further ways of ascending.§!\n\n$tec_loc_final_decision$"
+	tec_ascension.500.machineage.ascensions.tooltip:0 "$tec_loc_warning$ We will attempt to find alternative ways to completely transform our synthetic platforms into different ones, using §YExotic Resources§! for that goal, attempting to investigate about §YNanoreplication§!, §YModularity§! or even the power of §YVirtuality§! applications.\n§YThis will, however, end in a one-side way and don't allow further ways of ascending.§!\n\n$tec_loc_final_decision$"
 
 	tec_ascension.50001.name:0 "Artificial Evolution"
 	tec_ascension.50001.desc.individual:0 "REPLACE_ME"
