--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -3185,7 +3185,7 @@ l_english:
  # /
  # ------------------------------------------------- Nanite buildings
 	# Production
-		building_tec_nanite_forge:0 "Nanorreplicator"
+		building_tec_nanite_forge:0 "Nanoreplicator"
 		building_tec_nanite_forge_desc:0 "Semi Self-sufficient structures serving as production lines of contained nanobots, created in batches with advanced technology and resources."
 
 		building_tec_nanite_transmuter:0 "Nanite Complex"
