--- a/localisation/english/zz_evolved_tech_l_english.yml
+++ b/localisation/english/zz_evolved_tech_l_english.yml
@@ -68,8 +68,8 @@
 
 	tech_tec_naniteproduction:0 "Nanorrobotic Serialization"
 	tech_tec_naniteproduction_desc:0 "Years of study of miniaturization, heat dissipation and advanced AI development had the result of creating semi-autonomous and self-replicating nanobots with a myriad of uses, each one with integrated killed switches for safety messures."
-	tech_tec_allow_naniteforges:0 "§HUnlocks Building:§! Nanorreplicator"
-	tech_tec_allow_naniteforges_desc:0 "§HNanorreplicator:§!\nEfficient building that convert £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic Resources into £nanites£ Nanites."
+	tech_tec_allow_naniteforges:0 "§HUnlocks Building:§! Nanoreplicator"
+	tech_tec_allow_naniteforges_desc:0 "§HNanoreplicator:§!\nEfficient building that convert £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic Resources into £nanites£ Nanites."
 
 	building_advanced_nanite_transmuter:0 "A"
 	building_advanced_nanite_transmuter_desc:0 "A"
