--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -29,7 +29,7 @@
 
 	trait_tec_lithoid_sedimentary:0 "Sedimentary Aggregation"
 	trait_tec_lithoid_sedimentary_desc:0 "§LThis Lithoid species is generally composed by the selective aggregation of inert material around an evergrowing core, that also adapt itself to produce offspring in the same manner.§!\n"
-	TRAIT_TEC_LITHOID_SEDIMENTARY_EFFECT:0 "$tec_identity_trait$\n\nNew colonies will have up to §Y3§! extra £blocker£ Lithoid Blockers that can be cleared for additional §YLithoid Pops§!.\nEach pop produces 0.1 £job_tec_cloner£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!\nPop $tec_loc_minerals$ Upkeep: §R+0.30§!"
+	TRAIT_TEC_LITHOID_SEDIMENTARY_EFFECT:0 "$tec_identity_trait$\n\nNew colonies will have up to §Y3§! extra £blocker£ Lithoid Blockers that can be cleared for additional §YLithoid Pops§!.\nEach pop produces §Y$@trait_tec_sedimentary_rate_tt$§! £job_tec_cloner£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!\nPop $tec_loc_minerals$ Upkeep: §R+0.30§!"
 
 	# Additional unique traits
 	trait_tec_cryptobiotic:0 "Cryptobiosis"
@@ -389,7 +389,7 @@
 	#trait_mol_shell_desc:0 "§LA thick layer of solid material encases some parts or the whole body of this species, making a excellent defensive barrier against attackers, making every member a kind of slow mobile fortress.§!"
 	trait_tec_siliceous:0 "Siliceous Molt"
 	trait_tec_siliceous_desc:0 "§LBy chemical processing of inert material, this species segregate hardened mineral substances used for different ways of protection or general corporeal composition.§!"
-	TRAIT_TEC_SILICEOUS_EFFECT:0 "$tec_identity_trait$\n\n$mod_pop_category_normal_resources_minerals_produces_add$: §G+$@tec_siliceous_trait_production$§!\n$MOD_POP_HOUSING_USAGE_MULT$ if §EMolluscoid§! Species: §G-10%§!\n\n§HProduction doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+	TRAIT_TEC_SILICEOUS_EFFECT:0 "$tec_identity_trait$\n\n$mod_pop_category_normal_resources_minerals_produces_add$: §G+$@trait_tec_siliceous_minerals_rate$§!\n$MOD_POP_HOUSING_USAGE_MULT$ if §EMolluscoid§! Species: §G-10%§!\n\n§HProduction doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 
 	trait_mol_social:0 "A"
 	trait_mol_social_desc:0 "§La.§!"
@@ -418,30 +418,30 @@
  # Lithoid
 	trait_tec_lithophytic:0 "Lithophytic Symbiosis"
 	trait_tec_lithophytic_desc:0 "§LThis Lithoid species has a deep symbiotic relation with diverse mycelial and vegetal lifeforms, allowing the mutual benefit of protection and nourishment.§!"
-	TRAIT_TEC_LITHOPHYTIC_EFFECT:0 "$tec_identity_trait$\n\n$mod_pop_category_normal_resources_food_produces_add$: §G+$@tec_lithophytic_trait_production$§!\n$mod_planet_pops_upkeep_mult$ if §EPlantoid§! £pop£ Pops on Planet: §G-10%§!\n\n§HProduction doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+	TRAIT_TEC_LITHOPHYTIC_EFFECT:0 "$tec_identity_trait$\n\n$mod_pop_category_normal_resources_food_produces_add$: §G+$@trait_tec_lithophytic_food_rate$§!\n$mod_planet_pops_upkeep_mult$ if §EPlantoid§! £pop£ Pops on Planet: §G-10%§!\n\n§HProduction doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 # /
 
 # Other
 	trait_tec_bioelectrical:0 "Electrogenic"
 	trait_tec_bioelectrical_desc:0 "§LAn evolutionary advantage made this species able to generate and store a relatively high energy potency; as a byproduct, a constant stream of usable energy could be obtained from such organic functionality.§!"
-	trait_tec_bioelectrical_effect:0 "$tec_identity_trait$\n\n$mod_pop_category_normal_resources_energy_produces_add$: §G+$@tec_bioelectrical_trait_production$§!\nEach $tec_loc_pop$ increase the $tec_loc_energy$ Output on the planet by §G+$@tec_bioelectrical_energy_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+	trait_tec_bioelectrical_effect:0 "$tec_identity_trait$\n\n$mod_pop_category_normal_resources_energy_produces_add$: §G+$@trait_tec_bioelectrical_energy_rate$§!\nEach $tec_loc_pop$ increase the $tec_loc_energy$ Output on the planet by §G+$@tec_bioelectrical_energy_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 
 	trait_tec_earthen:0 "Earthen Instinct"
 	trait_tec_earthen_desc:0 "§LA deep connection with the soil made this species to thrive, being able to instinctively locate and gather any rich material with ease.§!"
-	trait_tec_earthen_effect:0 "$tec_identity_trait$\n\n$tec_loc_unity$ from £job_miner£ $job_miner_plural$: §G+$@tec_earthen_trait_unity_job_add$§!\nEach $tec_loc_pop$ increase the $tec_loc_minerals$ Output on the planet by §G+$@tec_earthen_minerals_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for Lithoid ['concept_tec_effect_livestock_alias_icon']§!"
+	trait_tec_earthen_effect:0 "$tec_identity_trait$\n\n$tec_loc_unity$ from £job_miner£ $job_miner_plural$: §G+$@trait_tec_earthen_unity_job_add$§!\nEach $tec_loc_pop$ increase the $tec_loc_minerals$ Output on the planet by §G+$@tec_earthen_minerals_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for Lithoid ['concept_tec_effect_livestock_alias_icon']§!"
 
 	trait_tec_pollinators:0 "Botanic Pollinators"
 	trait_tec_pollinators_desc:0 "§LA symbiotic relationship between this species and the native vegetation of their origin made them extremely efficient pollinators, able to automatically process proteinaceous structures from the reproductive cycle of the latter, while helping to boost it as byproduct.§!"
-	trait_tec_pollinators_effect:0 "$tec_identity_trait$\n\n$tec_loc_food$ from £job_farmer£ $job_farmer_plural$: §G+$@tec_pollinators_trait_food_job_add$§!\nEach $tec_loc_pop$ increase the $tec_loc_food$ Output on the planet by §G+$@tec_pollinators_food_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for Organic ['concept_tec_effect_livestock_alias_icon']§!"
+	trait_tec_pollinators_effect:0 "$tec_identity_trait$\n\n$tec_loc_food$ from £job_farmer£ $job_farmer_plural$: §G+$@trait_tec_pollinators_food_job_add$§!\nEach $tec_loc_pop$ increase the $tec_loc_food$ Output on the planet by §G+$@tec_pollinators_food_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for Organic ['concept_tec_effect_livestock_alias_icon']§!"
 
 	trait_tec_technophile:0 "Technophiles"
 	trait_tec_technophile_desc:0 "§LThe need of technological process has driven these organics to consecrate their lives to the discovery of new ways of advance, with rational thinking and scientific ideas as their main.§!"
-	trait_tec_technophile_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£job_researcher£ Researcher Output§! on the planet by §G+$@tec_technophile_boost_rate_tt$%§!, and §YResearcher Upkeep§! by §R+$@tec_technophile_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will produce §G+$@tec_technophile_boost_techs_tt$%§! more per $tec_loc_ascension_perk$ unlocked.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+	trait_tec_technophile_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£job_researcher£ Researcher Output§! on the planet by §G+$@trait_tec_technophile_boost_rate_tt$%§!, and §YResearcher Upkeep§! by §R+$@trait_tec_technophile_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will produce §G+$@trait_tec_technophile_boost_techs_tt$%§! more per $tec_loc_ascension_perk$ unlocked.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 	#Each $tec_loc_pop$ will provide §G1§! $tec_loc_unity$ instantly after a research is completed
 
 	trait_tec_coactive:0 "Coactive"
 	trait_tec_coactive_desc:0 "§LWhen it comes to organization, development and unitary processes, this species shine like no other, using collaborative and effective ways to maximize the efficiency at any cost.§!"
-	trait_tec_coactive_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£unity£ Administrator Output§! on the planet by §G+$@tec_coactive_boost_rate_tt$%§!, and §YAdministrator Upkeep§! by §R+$@tec_coactive_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will produce §G+$@tec_coactive_boost_ascension_tt$%§! more per researched $tec_loc_technology$.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+	trait_tec_coactive_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£unity£ Administrator Output§! on the planet by §G+$@trait_tec_coactive_boost_rate_tt$%§!, and §YAdministrator Upkeep§! by §R+$@trait_tec_coactive_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will produce §G+$@trait_tec_coactive_boost_ascension_tt$%§! more per researched $tec_loc_technology$.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 # /
 
 
