feat: more improved tooltips and concepts

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -60,6 +60,8 @@ l_english:
 	building_tec_naval_building_tag: "['concept_tec_naval_building']"
 	building_tec_trade_building_tag: "['concept_tec_trade_building']"
 	building_tec_silo_building_tag: "['concept_tec_silo_building']"
+	building_tec_cloning_building_tag: "['concept_tec_cloning_building']"
+	building_tec_robot_assembly_building_tag: "['concept_tec_robot_assembly_building']"
  # /
 
  # Utilities
