--- a/localisation/english/replace/zz_evolved_origins_l_english.yml
+++ b/localisation/english/replace/zz_evolved_origins_l_english.yml
@@ -209,7 +209,7 @@ l_english:
  # ------------------------------------------------- Mechanist
 	origin_mechanists:0 "$civic_mechanists$"
 	origin_mechanists_desc:0 "This civilization has been preoccupied with the idea of metallic automatons since the early Steam Age. Although many said it could not be done, the first true robots left the assembly lines long before even rudimentary space flight was achieved."
-	origin_tooltip_mechanists_effects:3 "The development of robotic technologies in an accelerated speed has skyrocketed the production of mechanical units.\n\n$tec_loc_o_pops$ §H£job_roboticist£ Robotic Population§!\n- Start the game with §G+2§! additional $tec_loc_pops$ of the §Y$tec_loc_main_species$§!\n- Replace §G+10§! $tec_loc_pops$ with ['concept_robots', £mod_planet_jobs_robotic_produces_mult£ Robotic] Pops\n\n$tec_loc_o_secondary_species$ §H£mod_planet_jobs_robotic_produces_mult£ $tec_robot_subname$§!\n- Robotic pops will starts with ['trait:trait_auto_mod_robotic'] Trait\n- Starts with ['building:building_robot_assembly_plant', £building£ $building_robot_assembly_plant$] to assemble §Y$tec_robot_subname$§!\n\n$tec_loc_o_unlocks_feature$ §HRobotic Technologies§!\n- Starts with ['concept_tec_tech_powered_exoskeletons'] and ['concept_tec_tech_robotic_workers'] Technologies researched\n- Starts with research option ['concept_tec_tech_robomodding']"
+	origin_tooltip_mechanists_effects:3 "The development of robotic technologies in an accelerated speed has skyrocketed the production of mechanical units.\n\n$tec_loc_o_pops$ §H£job_roboticist£ Robotic Population§!\n- Start the game with §G+2§! additional $tec_loc_pops$ of the §Y$tec_loc_main_species$§!\n- Replace §G+10§! $tec_loc_pops$ with ['concept_robots', £mod_planet_jobs_robotic_produces_mult£ Robotic] Pops\n\n$tec_loc_o_secondary_species$ §H£mod_planet_jobs_robotic_produces_mult£ $tec_robot_subname$§!\n- Robotic pops will starts with ['trait:trait_auto_mod_robotic'] Trait\n- ['concept_tec_starting_building_slot_assembly', §WStarts§!] with ['building:building_robot_assembly_plant', £building£ $building_robot_assembly_plant$] Building to assemble §Y$tec_robot_subname$§!\n\n$tec_loc_o_unlocks_technology$ §H£job_roboticist£ Robotic Technologies§!\n- Starts with ['concept_tec_tech_powered_exoskeletons'] and ['concept_tec_tech_robotic_workers'] Technologies\n\n$tec_loc_o_unlocks_technology_option$ ['concept_tec_tech_robomodding']"
  
 	tec_robot_subname:0 "Robotic Units"
 
@@ -231,7 +231,7 @@ l_english:
  # ------------------------------------------------- Shattered Ring
 	origin_shattered_ring:0 "Shattered Ring"
 	origin_shattered_ring_desc:1 "This civilization inhabits a Ring World built by unknown forerunners. If it can be understood and fully repaired it will grant them great power."
-	origin_tooltip_shattered_ring_effects:3 "An endless horizon, a technological ruined marvel, their home.\n\n$tec_loc_o_homeworld_alteration$ §H£planet£ Ring-World§!\n- The capital is replaced by a ['concept_pc_shattered_ring'].\n- Several of the systems of the Ring will require §YRestoration§!.\n- Several $tec_loc_blockers$ §RReduce§! the effectivity of the Ring Section.\n\n$tec_loc_o_alteration$ §H£planet£ Ruined Sections§!\n- ['concept_guaranteed_colonies'] are replaced by colonizable Ring World Segments.\n\n$tec_loc_o_overtime$ §H£alloys£ Restored Legacy§!\n- After restoring the Main Section, there will be ways to §YFully§! restore the ringworld"
+	origin_tooltip_shattered_ring_effects:3 "An endless horizon, a technological ruined marvel, their home.\n\n$tec_loc_o_homeworld_alteration$ §H£planet£ Ring-World§!\n- The capital is an intact ['concept_pc_ring']\n- Several $tec_loc_blockers$ §RReduce§! the effectivity of this Ring Segment\n\n$tec_loc_o_alteration$ §H£planet£ Ruined Sections§!\n- ['concept_guaranteed_colonies'] are replaced by colonizable ['concept_pc_shattered_ring'] and will require §YRestoration§!\n- Technologies are §Rrequired§! to make these segments habitable\n\n$tec_loc_o_overtime$ §H£alloys£ Restored Legacy§!\n- After restoring the Main Segment, there will be ways to §YFully§! restore the ringworld"
 
 		#VANILLA_origin_tooltip_shattered_ring_effects:3 "- $HOMEWORLD$ ['concept_pc_shattered_ring']$NEW_LINE$- ['concept_guaranteed_colonies']: Colonizable Ring World Segments instead of Planets$NEW_LINE$- $SPECIES_TRAITS$ ['concept_ring_preference']"
 		#VANILLA_origin_tooltip_shattered_ring_effects_lithoid:0 "§R- WARNING: Challenging Origin for Lithoids due to a scarcity of minerals.§!$NEW_LINE$$origin_tooltip_shattered_ring_effects$"
@@ -242,8 +242,8 @@ l_english:
  # ------------------------------------------------- Offspring
 	origin_progenitor_hive:0 "Progenitor Hive"
 	origin_progenitor_hive_desc:1 "This hive has gained evolutionary advantage through semi-independent leaders. These ''Offspring'' greatly improve overall proficiency, though they require constant oversight."
-	origin_tooltip_progenitor_hive_effects:5 "$tec_loc_o_unlocks_feature$ §H£council£ Offspring Leaders§!\n- Offspring assigned leaders gain moderate amounts of §YPassive XP§!\n- If ['civic:civic_hive_devouring_swarm'] Civic is NOT selected, §ISectors§! can be released as §ISubjects§!\n\n$tec_loc_o_unlocks_feature$  ['concept_offspring_nests', §H£building£ $concept_offspring_nests$§!]\n- Allows building .\n\n$tec_loc_o_unlocks_feature$ §H£mod_country_naval_cap_add£ Naval Offsprings§!\n- Can construct §IOffspring Ships§!"
-	origin_tooltip_progenitor_hive_negative_effects: "- Disables the Gestalt Consciousness shared ruler level bonus.\n- Planets without a £building£ $building_offspring_nest$ will suffer Penalties\n- Fleets suffer from ['concept_insufficient_offspring_oversight']"
+	origin_tooltip_progenitor_hive_effects:5 "$tec_loc_o_unlocks_feature$ §H£council£ Offspring Leaders§!\n- Offspring assigned leaders gain moderate amounts of §YPassive XP§!\n- If ['civic:civic_hive_devouring_swarm'] Civic is NOT selected, §ISectors§! can be released as §ISubjects§!\n\n$tec_loc_o_unlocks_building$  ['concept_offspring_nests', §H£building£ $concept_offspring_nests$§!]\n- ['concept_tec_starting_building_slot_amenity', §WStarts§!] with the ['concept_offspring_nests', £building£ $concept_offspring_nests$] Building\n\n$tec_loc_o_unlocks_feature$ §H£mod_country_naval_cap_add£ Naval Offsprings§!\n- Can construct §IOffspring Ships§!\n\n$tec_loc_o_penalty$ §H£pop£ Offspring Oversight§!\n- Disables the Gestalt Consciousness shared ruler level bonus\n- Planets without a £building£ $building_offspring_nest$ will suffer Penalties\n- Fleets suffer from ['concept_insufficient_offspring_oversight']"
+	origin_tooltip_progenitor_hive_negative_effects: ""
 
 
 		#VANILLA_origin_tooltip_progenitor_hive_effects:5 "- ['concept_spawning_pools', £building£ Spawning Pools] replaced with ['concept_offspring_nests', £building£ Offspring Nest]\n- $AVAILABLE_HOLDINGS$ ['concept_offspring_holding', £building£ Offspring Nest]\n- If §I$civic_hive_devouring_swarm$§! Civic is NOT selected: §ISectors§! can be released as §ISubjects§!\n- Assigned §ILeaders§!: Gain additional passive experience\n- $AVAILABLE_STARBASE_BUILDINGS$ §IOffspring Outlook§!\n- Can construct §IOffspring Ships§!"
@@ -268,7 +268,7 @@ l_english:
 
 	# remnants
 	origin_tooltip_remnants_effects:5 "$tec_loc_o_homeworld_alteration$ §H£planet£ Ruined World§!\n- Homeworld is a beautiful ['concept_pc_relic'] (Size: £planetsize£ 22)\n- Starts with 6 ['concept_ruined_arcology', $concept_ruined_arcology$] Blockers\n[GetRemnantAncientRelicEffect]"
-	RemnantAncientRelicEffect:1 "- Starts with the ['concept_archaeostudies_faculty', £building£ $building_archaeostudies_faculty$] Building\n\n$tec_loc_o_unlocks_technology_option$ ['concept_archaeostudies', £society£ $tech_archaeostudies$]"
+	RemnantAncientRelicEffect:1 "- ['concept_tec_starting_building_slot_research', §WStarts§!] with the ['concept_archaeostudies_faculty', £building£ $building_archaeostudies_faculty$] Building\n\n$tec_loc_o_unlocks_technology_option$ ['concept_archaeostudies', £society£ $tech_archaeostudies$]"
 
 	# scion
 	origin_tooltip_scion_effects:3 "$tec_loc_o_condition$ §H£scion£ Ancient Guidance§!\n- Start as a ['concept_scion', £scion£ Scion] of a ['concept_fallen_empire'] Overlord\n- §YFallen Empire§! present in the galaxy regardless of Galaxy settings\n- Chance of receiving powerful gifts from Overlord\n\n$tec_loc_o_homeworld_alteration$ §H£mod_planet_hyperlane_range_add£ Olden Route§!\n- Connected to Overlord's capital via a ['concept_wormhole']"
@@ -323,7 +323,7 @@ l_english:
 
 	origin_ocean_paradise_effects:2 "$origin_ocean_paradise_effects_common$\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $trait_aquatic$§!\n- Your §Y$tec_loc_main_species$§! starts with the ['trait:trait_aquatic'] Trait \n\n$origin_ocean_paradise_effects_common_penalty$"
 
-	origin_ocean_machines_effects: "$origin_ocean_paradise_effects_common$\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $trait_robot_aquatic$§!\n- Your §Y$tec_loc_main_species$§! start with the ['trait:trait_robot_aquatic'] Trait \n\n$origin_ocean_paradise_effects_common_penalty$"
+	origin_ocean_machines_effects: "$origin_ocean_paradise_effects_common$\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $trait_robot_aquatic$§!\n- Your §Y$tec_loc_main_species$§! starts with the ['trait:trait_robot_aquatic'] Trait \n\n$origin_ocean_paradise_effects_common_penalty$"
 
 	# subteranean
 
@@ -335,7 +335,7 @@ l_english:
 
 
 	# shroud teachers
-	origin_tooltip_shroudwalker_apprentice_effects:3 "$tec_loc_o_unlocks_trait$ §H£pop£ $concept_latent_psionic$§!\n- Your §Y$tec_loc_main_species$§! start with the ['concept_latent_psionic'] Trait\n\n$tec_loc_o_unlocks_starbase_building$ ['concept_shroud_beacon', §H£mod_starbase_building_capacity_add£ $concept_shroud_beacon$§!]\n- Allows creation of a wormhole to the §Y$concept_shroudwalker_enclave$'s§! System\n\n$tec_loc_o_condition$ §H£mod_shroud_unavailable£ Shrouded Mentorship§!\n- Starts with communications with the ['concept_shroudwalker_enclave']\n\n$tec_loc_o_unlocks_technology_option$ ['concept_psionic_theory', £society£ $tech_psionic_theory$]"
+	origin_tooltip_shroudwalker_apprentice_effects:3 "$tec_loc_o_unlocks_trait$ §H£pop£ $concept_latent_psionic$§!\n- Your §Y$tec_loc_main_species$§! starts with the ['concept_latent_psionic'] Trait\n\n$tec_loc_o_unlocks_starbase_building$ ['concept_shroud_beacon', §H£mod_starbase_building_capacity_add£ $concept_shroud_beacon$§!]\n- Allows creation of a wormhole to the §Y$concept_shroudwalker_enclave$'s§! System\n\n$tec_loc_o_condition$ §H£mod_shroud_unavailable£ Shrouded Mentorship§!\n- Starts with communications with the ['concept_shroudwalker_enclave']\n\n$tec_loc_o_unlocks_technology_option$ ['concept_psionic_theory', £society£ $tech_psionic_theory$]"
 
 	# imperial
 	origin_tooltip_imperial_vassal_effects:2 "$tec_loc_o_condition$ §H£vassal£ Imperial Vassal§!\n- Starts as the subject of an ['concept_advanced_empire']\n\n$tec_loc_o_unlocks_feature$ §H£mod_star£ Specialized Subject§!\n- Can select a ['concept_specialist_subject', Specialist Subject] type at the start of the game"
