--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -238,6 +238,11 @@
 	concept_tec_economic_category_pin_icon: "£trigger_tec_question£"
 	concept_tec_economic_category_desc: "Economic Category represents the category of which something is part of. An entity, be it a $tec_loc_pop$, a $tec_loc_job$, a $tec_loc_building$ or a $tec_loc_leader$ (and many others) have an economic category which determines which modifiers it inherits which affect its economic output of resources, things like $tec_loc_food$, $tec_loc_alloys$ or $tec_loc_society$, but not things like $tec_loc_trade_value$, $tec_loc_amenities$ or $tec_loc_edict_funds$.\n\nSome example of economic categories are ['concept_tec_eco_planet_districts_alias'], ['concept_tec_eco_planet_researchers_alias'] or ['concept_tec_eco_planet_priests_alias_icon']\n\n§RTo not be confused with ['concept_tec_effect_category']§!"
 
+
+	concept_pc_ring: "$pc_ringworld_habitable$"
+	concept_pc_ring_desc: "- Base Habitability: §Y100%§!\n- Starts with a set of ['concept_tec_housing_district', $concept_tec_housing_district$s], ['concept_tec_industrial_district', $concept_tec_industrial_district$s] and ['concept_tec_menial_district', $concept_tec_menial_district$s]\n- Can be specialized by a §IPlanetary Decision§!, requiring ['ascension_perk:ap_galactic_wonders_utopia_and_megacorp'] $tec_loc_ascension_perk$, unlocking alternate £district£ §ISegment Districts§!\n- Every §Y$tec_loc_district$§! boosts the §YSegment§! for their specific purpose\n\n§L$pc_shattered_ring_habitable_desc$§!"
+
+
 	concept_tec_effect_category: "Effect Category"
 	concept_tec_effect_category_pin_icon: "£trigger_tec_question£"
 	concept_tec_effect_category_desc: "Effect Category represents the category and group of jobs which are affects by effects of Civics, Ascensions, Traditions and so on.\n\nModifiers that affect a specific Effect Category affect all jobs in that group, and usually represents modifiers that give $tec_loc_trade_value$, $tec_loc_amenities$ or $tec_loc_naval_cap$ and such (so not resources).\n\n§RTo not be confused with ['concept_tec_economic_category']§!"
@@ -340,6 +345,20 @@
 	concept_tec_silo_buildings: "Silo Buildings"
 	concept_tec_silo_buildings_icon: "£mod_country_resource_max_add£ Silo Buildings"
 	concept_tec_silo_building_desc: "Silo Buildings are §Y£building£ Buildings§! that give §Y£mod_country_resource_max_add£ $MOD_COUNTRY_RESOURCE_MAX_ADD$§!.\n\n$concept_tec_silo_building$:\n$t$- ['building:building_resource_silo']\n$t$- ['building:building_tec_biohive_resource_silo_1']\n$t$- ['building:building_fe_silo_1']"
+
+
+	concept_tec_cloning_building: "Cloning Building"
+	concept_tec_cloning_building_icon: "£job_tec_cloner£ Cloning Building"
+	concept_tec_cloning_buildings: "Cloning Buildings"
+	concept_tec_cloning_buildings_icon: "£job_tec_cloner£ Cloning Buildings"
+	concept_tec_cloning_building_desc: "Cloning Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_organic_assembly$§!.\n\n$concept_tec_cloning_building$:\n$t$- ['building:building_clone_vats']"
+
+	concept_tec_robot_assembly_building: "Mechanical Assembly Building"
+	concept_tec_robot_assembly_building_icon: "£job_roboticist£ "Mechanical Assembly Building"
+	concept_tec_robot_assembly_buildings: ""Mechanical Assembly Buildings"
+	concept_tec_robot_assembly_buildings_icon: "£job_roboticist£ "Mechanical Assembly Buildings"
+	concept_tec_robot_assembly_building_desc: ""Mechanical Assembly Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_assembly$§!.\n\n$concept_tec_robot_assembly_building$:\n$t$- ['building:building_robot_assembly_plant']\n$t$- ['building:building_mecha_monastery_1']\n$t$- ['building:building_hive_robot_assembly_plant']\n$t$- ['building:building_machine_assembly_plant']"
+
 
 	#concept_tec_leader_civic: "Leader Civic"
 	#concept_tec_leader_civics: "Leader Civics"
@@ -2518,6 +2537,31 @@
 	concept_tec_hired_jobs: "$tec_private_hired$ Jobs"
 	concept_tec_hired_jobs_icon: "£job£ $concept_tec_hired_jobs$"
 	concept_tec_hired_jobs_desc: "$tec_private_hired$ Jobs are jobs which mimic another job, with §Rless output§! in exchange for §Gless upkeep§! and extra §Y$tec_loc_trade_value$§!. Their production can generally be boosted by having §Y$BRANCH_OFFICES$§! on the planet, and by having their §Y£building£ Capital Buildings§! upgraded.\n\n$tec_private_hired$ Jobs consist of:\n- ['concept_tec_worker_job_tec_hired_miner']\n- ['concept_tec_worker_job_tec_hired_farmer']\n- ['concept_tec_worker_job_tec_hired_technician']\n- ['concept_tec_worker_job_tec_hired_soldier']\n- ['concept_tec_worker_job_tec_hired_foundry']\n- ['concept_tec_worker_job_tec_hired_catalytic']\n- ['concept_tec_worker_job_tec_hired_artisan']\n- ['concept_tec_worker_job_tec_hired_researcher']\n- ['concept_tec_worker_job_tec_hired_entertainer']"
+
+	concept_tec_starting_buidling_slots: "Starting Building Slots"
+	concept_tec_starting_buidling_slots_pin: "£trigger_tec_question£"
+	concept_tec_starting_buidling_slots_desc: "Your starting §Y$tec_loc_planet$§! (usually your Homeworld) starts with a few buildings, which are part of the following categories:\n$t$- ['concept_tec_starting_building_slot_research']\n$t$- ['concept_tec_starting_building_slot_unity']\n$t$- ['concept_tec_starting_building_slot_amenity']\n$t$- ['concept_tec_starting_building_slot_assembly'] (Optional)\n$t$- ['concept_tec_starting_building_slot_aux'] (Optional)\n\nThe buildings in these slots can be swapped or added by §YAuthority§!, §YEthics§!, §YCivics§! and §YOrigins§!"
+
+	concept_tec_starting_building_slot_research: "Research Building Slot"
+	concept_tec_starting_building_slot_research_pin: "£trigger_tec_question£"
+	concept_tec_starting_building_slot_research_desc: "This is part of the ['concept_tec_starting_buidling_slots'], it is §Ysingular§! and usually contains a building that provides §Y$tec_loc_research_resources$§! to your empire.\n\nMost empires start with ['building:building_research_lab_1'] in this slot."
+
+	concept_tec_starting_building_slot_unity: "Unity Building Slot"
+	concept_tec_starting_building_slot_unity_pin: "£trigger_tec_question£"
+	concept_tec_starting_building_slot_unity_desc: "This is part of the ['concept_tec_starting_buidling_slots'], it is §Ysingular§! and usually contains a building that provides §Y$tec_loc_unity$§! to your empire.\n\nUsual starting buildings in this slot:\n$t$- ['building:building_bureaucratic_1'] (Regular)\n$t$- ['building:building_hive_node'] ($auth_hive_mind$)\n$t$- ['building:building_tec_cyberhive_node'] ($auth_tec_hive_cybernetic$)\n$t$- ['building:building_tec_biohive_node'] ($auth_tec_hive_biological$)\n$t$- ['building:building_uplink_node'] ($auth_machine_intelligence$)"
+
+	concept_tec_starting_building_slot_amenity: "Amenities Building Slot"
+	concept_tec_starting_building_slot_amenity_pin: "£trigger_tec_question£"
+	concept_tec_starting_building_slot_amenity_desc: "This is part of the ['concept_tec_starting_buidling_slots'], it is §Ysingular§! and usually contains a building that provides §Y$tec_loc_amenities$§! to the planet.\n\nUsual starting buildings in this slot:\n-$t$ ['building:building_commercial_zone'] (Regular)\n$t$- ['building:building_hive_warren'] ($auth_hive_mind$ and $auth_tec_hive_biological$)\n$t$- ['building:building_tec_gestalt_parts_1'] ($auth_tec_hive_cybernetic$ and $auth_machine_intelligence$)"
+
+	concept_tec_starting_building_slot_assembly: "Assembly Building Slot"
+	concept_tec_starting_building_slot_assembly_pin: "£trigger_tec_question£"
+	concept_tec_starting_building_slot_assembly_desc: "This is part of the ['concept_tec_starting_buidling_slots'], it is an §Yoptional§! and §Ysingular§! slot and might contain a building that provides §Y$tec_loc_generic_assembly$§! to the planet."
+
+
+	concept_tec_starting_building_slot_aux: "Auxiliary Building Slot"
+	concept_tec_starting_building_slot_aux_pin: "£trigger_tec_question£"
+	concept_tec_starting_building_slot_aux_desc: "This is part of the ['concept_tec_starting_buidling_slots'], it is an §Yoptional§! slot, that might contain §Gmultiple§! buildings if the planet can support them, and are §RNOT§! guaranteed to appear on your starting §Y$tec_loc_planet$§!."
  # /
  # Mechanics
 
@@ -2930,6 +2974,13 @@
 	concept_tec_tech_gene_expressions_effect: "- $TECH_UNLOCK_GENE_EXPRESSIONS_TITLE$"
 	concept_tec_tech_gene_expressions_desc: "$concept_tec_tech_gene_expressions_effect$\n\n§L$tech_gene_expressions_desc$§!"
 
+	concept_tec_tech_cloning: "£society£ $tech_cloning$"
+	concept_tec_tech_cloning_effect: "- $tec_loc_hc_unlock_building$ ['building:building_clone_vats']"
+	concept_tec_tech_cloning_desc: "$concept_tec_tech_cloning_effect$\n\n§L$tech_cloning_desc$§!"
+	
+	concept_tec_tech_gene_banks: "£society£ $tech_gene_banks$"
+	concept_tec_tech_gene_banks_effect: "- $tec_loc_hc_unlock_army$ $clone_army$"
+	concept_tec_tech_gene_banks_desc: "$concept_tec_tech_gene_banks_effect$\n\n§L$tech_gene_banks_desc$§!"
 	# Tech Groups
 	concept_tec_tech_group_dark_matter_techs: "$tec_loc_dark_matter$ Technologies"
 	concept_tec_tech_group_dark_matter_techs_desc: "- ['concept_tec_tech_dark_matter_deflector']\n- ['concept_tec_tech_dark_matter_power_core']\n- ['concept_tec_tech_dark_matter_propulsion']"
