--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -243,6 +243,7 @@
 
 	tec_loc_terraform:0 "£planet£ Terraform"
 
+
 	tec_blank:0 ""
 	tec_error:0 "£trigger_no£ §RERROR§!"
 	tec_disabled_temporarely: "£trigger_tec_warning£§YTEMPORARILY DISABLED§!"
@@ -315,6 +316,7 @@
 
 	tec_loc_hc_unlock_feature: "§HUnlocks Feature:§!"
 	tec_loc_hc_unlock_building: "§HUnlocks Building:§!"
+	tec_loc_hc_unlock_army: "§HUnlocks Army:§!"
 	tec_loc_hc_unlock_mega: "§HUnlocks Megastructure:§!"
 	tec_loc_hc_unlock_trait: "§HUnlocks Trait:§!"
 
