temporary work machinist

--- a/localisation/english/zz_bioservant_l_english.yml
+++ b/localisation/english/zz_bioservant_l_english.yml
@@ -12,8 +12,11 @@
  # - - - - - - - - - - - - - - - - - - - - - # - - - - - - - - - - - - - - - - - - - - - ##
  
  BIOSERVANT:0 "Bio-Construct"
+ MECHANICAL: "Mechanical"
  NAME_bioservant:0 "Bio-Servant"
+ NAME_mechanical: "Mechanical"
  NAME_BIOSERVANT:0 "Bio-Servant"
+ NAME_MECHANICAL: "Mechanical"
  NAME_bioservants:0 "Bio-Servants"
  NAME_BIOSERVANTS:0 "Bio-Servants"
  BIOSERVANT_plural:0 "Bio-Servants"
