--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2658,7 +2658,7 @@
 	concept_tec_eco_planet_livestock_icon: "£job_livestock£ $planet_livestock$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_livestock_alias: "$planet_livestock$"
 	concept_tec_eco_planet_livestock_alias_icon: "£job_livestock£ $planet_livestock$"
-	concept_tec_eco_planet_livestock_desc: "This category applies to ['concept_tec_worker_job_livestock_plural_icon'] jobs, which usually can be acquired by using the §YLivestock Slavery§! species right, and other jobs that might fall under this category.\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']"
+	concept_tec_eco_planet_livestock_desc: "This category applies to ['concept_tec_worker_job_livestock_plural_icon'] jobs, which usually can be acquired by using the §YLivestock Slavery§! species right, and other jobs that might fall under this category.\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']\n\nFor ['concept_tec_worker_job_livestock_plural_icon'] Jobs only:\n-Inherits All Modifiers from If §YLithoid§!: ['concept_tec_eco_planet_miners_alias_icon']\n-Inherits All Modifiers from If non-§YLithoid§!: ['concept_tec_eco_planet_farmers_alias_icon']"
 
 	concept_tec_eco_planet_tec_labrats: "$planet_tec_labrats$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_tec_labrats_icon: "£job_tec_labrat£ $planet_tec_labrats$ $tec_loc_eco_category$"
