feat: more 3.13 changes for buildings, districts, deposits and jobs and inlines

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -701,6 +701,12 @@ l_english:
 
 		building_tec_biohive_betharian_power_plant:0 "Betharian Nodule"
 		building_tec_biohive_betharian_power_plant_desc:0 "And adapted biogenerator nodule now located near a source of Betharian, greatly amplifying the qualities of the processed energy and improving the production in a massive scale by collection of the hyper-conductive material."
+
+		building_tec_strategic_miner: "Strategic Exploitation Facility"
+		building_tec_strategic_miner_desc: "This advanced complex employs specialized technologies to maximize the extraction and refinement of strategic resources. Cutting-edge equipment efficiently processes crystals, motes, and gases, transforming raw materials into valuable empire assets."
+
+		building_tec_biohive_strategic_miner: "Strategic Extirpation Organelle"
+		building_tec_biohive_strategic_miner_desc: "This vast, pulsating organelle extends tendrils deep into the planet's crust, sensing and absorbing strategic resources. Specialized membrane structures efficiently filter crystals, motes, and gases, metabolizing them into forms the hive can readily assimilate and utilize."
 	# /
 	# --------------- Military/Naval
 		building_tec_biohive_stronghold:0 "Drone Stronghold"
