--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -985,6 +985,14 @@ l_english:
 	district_tec_factory:0 "Factory District"
 	district_tec_factory_plural:0 "Factory Districts"
 	district_tec_factory_desc:0 "Factories and manufacturing lines fill this district, dedicated to producing consumer goods for the population."
+
+	district_tec_prison_factory: "Prison Factory District"
+	district_tec_prison_factory_plural: "Prison Factory Districts"
+	district_tec_prison_factory_desc: "Workshops, factories, surveillance systems, and fortified barriers for detainment and productive labor within the bounds of security and order."
+
+	district_prison_industrial: "Prison Foundry District"
+	district_prison_industrial_plural: "Prison Foundry Districts"
+	district_prison_industrial_desc: "Foundries, surveillance systems, and fortified barriers for detainment and productive labor within the bounds of security and order."
  # /
 # /
 
