--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -208,10 +208,10 @@
 
 # DEPOSITS replaces
 # ------------------------------------------------------------
-	mod_building_crystal_mines_max:0 "Allows £building£ $building_crystal_mines$.\nMax £rare_crystals£ Rare Crystal Mining Jobs"
-	mod_building_mote_harvesters_max:0 "Allows £building£ $building_mote_harvesters$.\nMax £volatile_motes£ Volatile Mote Trapping Jobs"
-	mod_building_gas_extractors_max:0 "Allows £building£ $building_gas_extractors$.\nMax £exotic_gases£ Exotic Gas Extraction Jobs"
-	mod_building_betharian_power_plant_max:0 "Allows £building£ $building_betharian_power_plant$.\nMax £energy£ Technician Jobs"
+	mod_building_crystal_mines_max:0 "Allows ['building:building_tec_strategic_miner', £building£ $building_tec_strategic_miner$]\nWill remove £job_miner£ [GetMiner] $tec_loc_rare_crystals$ bonuses if built\nMax £rare_crystals£ Rare Crystal Mining Jobs on Building"
+	mod_building_mote_harvesters_max:0 "Allows  ['building:building_tec_strategic_miner', £building£ $building_tec_strategic_miner$]\nWill remove £job_miner£ [GetMiner] $tec_loc_volatile_motes$ bonuses if built\nMax £volatile_motes£ Volatile Mote Trapping Jobs on Building"
+	mod_building_gas_extractors_max:0 "Allows ['building:building_tec_strategic_miner', £building£ $building_tec_strategic_miner$]\nWill remove £job_miner£ [GetMiner] $tec_loc_exotic_gases$ bonuses if built\nMax £exotic_gases£ Exotic Gas Extraction Jobs on Building"
+	mod_building_betharian_power_plant_max:0 "Allows ['building:building_betharian_power_plant', £building£ $building_betharian_power_plant$]\nMax £energy£ Technician Jobs (x4)"
 
 # BUILDINGS replaces - TODO REMOVE
 # ------------------------------------------------------------
@@ -369,9 +369,11 @@ slavery_indentured_tooltip:2 "§HIndentured Servants§! can be employed in £pop
 
 slavery_livestock_tooltip:3 "§HLivestock§! Pops under ['concept_tec_right_option_citizenship_slavery_alias_icon'] Citizenship cannot be employed to produce resources, but are instead kept around to increase the £food£ §HFood§! supply.\n\n§HLivestock§! Pops under ['concept_tec_right_option_citizenship_full_alias_icon'] or ['concept_tec_right_option_citizenship_limited_alias_icon'] Citizenship (for empires with partial Slavery)  can be employed in any job, if they become §YUnemployed§!, they become Livestock.\n\nLithoid Livestock produce £minerals£ §HMinerals§! instead.\n\nLivestock can be kept in §HAlien Zoos§! to provide $r_amenities$."
 
-	TRAIT_LITHOID_GASEOUS_BYPRODUCTS_EFFECT:1 "$mod_pop_category_normal_resources_exotic_gases_produces_add$: §G+$@lithoid_trait_resource_production$§!\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
-	TRAIT_LITHOID_SCINTILLATING_EFFECT:1 "$mod_pop_category_normal_resources_rare_crystals_produces_add$: §G+$@lithoid_trait_resource_production$§!\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
-	TRAIT_LITHOID_VOLATILE_EXCRETIONS_EFFECT:1 "$mod_pop_category_normal_resources_volatile_motes_produces_add$: §G+$@lithoid_trait_resource_production$§!\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+TRAIT_LITHOID_GASEOUS_BYPRODUCTS_EFFECT:1 "$mod_pop_category_normal_resources_exotic_gases_produces_add$: §G+$@lithoid_trait_resource_production$§!\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+TRAIT_LITHOID_SCINTILLATING_EFFECT:1 "$mod_pop_category_normal_resources_rare_crystals_produces_add$: §G+$@lithoid_trait_resource_production$§!\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+TRAIT_LITHOID_VOLATILE_EXCRETIONS_EFFECT:1 "$mod_pop_category_normal_resources_volatile_motes_produces_add$: §G+$@lithoid_trait_resource_production$§!\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+
+TRAIT_EXD_EFFECT: "Replaces $r_food$ Upkeep with $r_energy$ Upkeep"
 
 inorganic_breath_tooltip:2 "\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 
