feat: more cahnges for 3.13

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1946,6 +1946,10 @@
 
 	TRAIT_SYMBIOTIC_EFFECT:0 "$MOD_POP_HAPPINESS$: §G+20%§!\n$MOD_LEADER_SKILL_LEVELS$: §R-1§!\n$MOD_LEADER_SPECIES_EXP_GAIN$: §R-15%§!\nCan generate §YLeaders§!\nCannot be employed in §Y$pop_cat_ruler$§! Jobs"
 
+	trait_tec_bioservant_domestic_servant: "Bio-Engineered Servant"
+	trait_tec_bioservant_domestic_servant_desc: "Genetically optimized for domestic tasks, with instincts and abilities tailored for service in diverse environments."
+	TRAIT_TEC_BIOSERVANT_DOMESTIC_SERVANT_EFFECT:1 "Can be employed in £job_servant£ §Y$job_servant$§! Jobs if under §Y$bioservant_servitude_name$§!"
+
 # LEADER TRAITS
 # ------------------------------------------------------------
 # Leader traits that are not tied to a species trait
